--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      name: Default    # <-- Використовує твій локальний агент!
+      name: Default
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
@@ -45,16 +45,16 @@ stages:
   - job: TerraformPlan
     displayName: "Terraform Plan"
     pool:
-      name: Default   # <-- Теж локальний агент
+      name: Default
     steps:
     - checkout: self
 
     - script: |
-        echo "Installing Terraform..."
-        curl -fsSL https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg > /dev/null
-        echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-        sudo apt update && sudo apt install terraform -y
-      displayName: 'Install Terraform'
+        echo "Installing Terraform on Fedora..."
+        sudo dnf install -y dnf-plugins-core
+        sudo dnf config-manager --add-repo https://rpm.releases.hashicorp.com/fedora/hashicorp.repo
+        sudo dnf install -y terraform
+      displayName: 'Install Terraform (Fedora)'
 
     - script: |
         terraform -version
@@ -77,16 +77,16 @@ stages:
   - job: TerraformApply
     displayName: "Terraform Apply"
     pool:
-      name: Default   # <-- Локальний агент
+      name: Default
     steps:
     - checkout: self
 
     - script: |
-        echo "Installing Terraform..."
-        curl -fsSL https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg > /dev/null
-        echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-        sudo apt update && sudo apt install terraform -y
-      displayName: 'Install Terraform'
+        echo "Installing Terraform on Fedora..."
+        sudo dnf install -y dnf-plugins-core
+        sudo dnf config-manager --add-repo https://rpm.releases.hashicorp.com/fedora/hashicorp.repo
+        sudo dnf install -y terraform
+      displayName: 'Install Terraform (Fedora)'
 
     - script: |
         terraform -version
