--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,9 +51,9 @@ stages:
 
     - script: |
         echo "Installing Terraform..."
-        dnf install -y dnf-plugins-core
-        dnf config-manager --add-repo https://rpm.releases.hashicorp.com/fedora/hashicorp.repo
-        dnf install terraform -y
+        sudo dnf install -y dnf-plugins-core
+        sudo dnf config-manager --add-repo https://rpm.releases.hashicorp.com/fedora/hashicorp.repo
+        sudo dnf install terraform -y
       displayName: 'Install Terraform'
 
     - script: |
@@ -83,9 +83,9 @@ stages:
 
     - script: |
         echo "Installing Terraform..."
-        dnf install -y dnf-plugins-core
-        dnf config-manager --add-repo https://rpm.releases.hashicorp.com/fedora/hashicorp.repo
-        dnf install terraform -y
+        sudo dnf install -y dnf-plugins-core
+        sudo dnf config-manager --add-repo https://rpm.releases.hashicorp.com/fedora/hashicorp.repo
+        sudo dnf install terraform -y
       displayName: 'Install Terraform'
 
     - script: |
