Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,10 +50,12 @@ stages:
     - checkout: self
 
     - script: |
-        echo "Installing Terraform..."
-        sudo dnf install -y dnf-plugins-core
-        sudo dnf config-manager --add-repo https://rpm.releases.hashicorp.com/fedora/hashicorp.repo
-        sudo dnf install terraform -y
+        echo "Installing Terraform"
+        sudo dnf install -y wget unzip
+        wget https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
+        unzip terraform_${terraformVersion}_linux_amd64.zip
+        sudo mv terraform /usr/local/bin/
+        terraform -version
       displayName: 'Install Terraform'
 
     - script: |
@@ -83,9 +85,11 @@ stages:
 
     - script: |
         echo "Installing Terraform..."
-        sudo dnf install -y dnf-plugins-core
-        sudo dnf config-manager --add-repo https://rpm.releases.hashicorp.com/fedora/hashicorp.repo
-        sudo dnf install terraform -y
+        sudo dnf install -y wget unzip
+        wget https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
+        unzip terraform_${terraformVersion}_linux_amd64.zip
+        sudo mv terraform /usr/local/bin/
+        terraform -version
       displayName: 'Install Terraform'
 
     - script: |
