--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,7 +61,11 @@ stages:
         terraform init -reconfigure
         terraform plan \
           -var="acr_username=$(acr_username)" \
-          -var="acr_password=$(acr_password)"
+          -var="acr_password=$(acr_password)" \
+          -var="subscription_id=$(subscription_id)" \ 
+          -var="client_id=$(client_id)" \ 
+          -var="client_secret=$(client_secret)" \
+          -var="tenant_id=$(tenant_id)"            
       displayName: 'Terraform Init & Plan'
 
 - stage: TerraformApply
@@ -93,5 +97,9 @@ stages:
         terraform init -reconfigure
         terraform apply -auto-approve \
           -var="acr_username=$(acr_username)" \
-          -var="acr_password=$(acr_password)"
+          -var="acr_password=$(acr_password)"\
+          -var="subscription_id=$(subscription_id)" \ 
+          -var="client_id=$(client_id)" \ 
+          -var="client_secret=$(client_secret)" \
+          -var="tenant_id=$(tenant_id)"   
       displayName: 'Terraform Init & Apply'
