--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,6 +56,7 @@ stages:
       displayName: 'Install Terraform'
 
     - script: |
+        cd terraform
         terraform plan \
         -var="acr_username=$(acr_username)" \
         -var="acr_password=$(acr_password)" \
@@ -90,6 +91,7 @@ stages:
       displayName: 'Install Terraform'
 
     - script: |
+        cd terraform
         terraform apply \
         -var="acr_username=$(acr_username)" \
         -var="acr_password=$(acr_password)" \
