--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,7 @@ stages:
 
     - script: |
         cd terraform
-        terraform plan \
+        terraform plan -reconfigure \
         -var="acr_username=$(acr_username)" \
         -var="acr_password=$(acr_password)" \
         -var="subscription_id=$(subscription_id)" \
@@ -91,7 +91,7 @@ stages:
 
     - script: |
         cd terraform
-        terraform apply \
+        terraform apply -reconfigure\
         -var="acr_username=$(acr_username)" \
         -var="acr_password=$(acr_password)" \
         -var="subscription_id=$(subscription_id)" \
