--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,8 @@ stages:
 
     - script: |
         cd terraform
-        terraform plan -reconfigure \
+        terraform init \
+        terraform plan \
         -var="acr_username=$(acr_username)" \
         -var="acr_password=$(acr_password)" \
         -var="subscription_id=$(subscription_id)" \
@@ -91,7 +92,8 @@ stages:
 
     - script: |
         cd terraform
-        terraform apply -reconfigure\
+        terrafrom init\
+        terraform apply\
         -var="acr_username=$(acr_username)" \
         -var="acr_password=$(acr_password)" \
         -var="subscription_id=$(subscription_id)" \
