Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -103,6 +103,7 @@ stages:
         cd terraform
         terraform -version
         terraform init -reconfigure 
+        terraform import azurerm_resource_group.main_rsg /subscriptions/a42939ef-0995-48fe-84c1-d0e0333ca1d7/resourceGroups/resources
         terraform apply -auto-approve \
         -var="acr_username=$(acr_username)" \
         -var="acr_password=$(acr_password)" \
