--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,6 @@ ModelManifest.xml
 
 *.terraform
 .terraform.lock.hcl
+terraform/variables.tfvars
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
