--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,8 +59,8 @@ stages:
         terraform -version
         terraform init -reconfigure
         terraform plan \
-        -var="acr_username"=$(acr_username)" \
-        -var="acr_password"=$(acr_password)" \        
+        -var="acr_username=$(acr_username)" \
+        -var="acr_password=$(acr_password)" \        
         -var="subscription_id=$(subscription_id)" \
         -var="client_id=$(client_id)" \
         -var="client_secret=$(client_secret)" \
@@ -105,8 +105,8 @@ stages:
         terraform init -reconfigure 
         terraform import azurerm_resource_group.main_rsg /subscriptions/a42939ef-0995-48fe-84c1-d0e0333ca1d7/resourceGroups/resources
         terraform apply -auto-approve \
-        -var="acr_username"=$(acr_username)" \
-        -var="acr_password"=$(acr_password)" \   
+        -var="acr_username=$(acr_username)" \
+        -var="acr_password=$(acr_password)" \   
         -var="subscription_id=$(subscription_id)" \
         -var="client_id=$(client_id)" \
         -var="client_secret=$(client_secret)" \
