--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -105,7 +105,7 @@ stages:
         export TF_LOG=DEBUG
         terraform init -reconfigure  -input=false -no-color
         terraform import azurerm_resource_group.main_rsg /subscriptions/a42939ef-0995-48fe-84c1-d0e0333ca1d7/resourceGroups/mainresources
-        terraform apply -auto-approve -input=false -no-color -verbose \
+        terraform apply -auto-approve -input=false -no-color \
           -var="acr_username=$(acr_username)" \
           -var="acr_password=$(acr_password)" \
           -var="subscription_id=$(subscription_id)" \
