Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -103,6 +103,7 @@ stages:
     - script: |
         cd terraform
         export TF_LOG=DEBUG
+        echo $(acr_password)
         terraform init -reconfigure  -input=false -no-color
         terraform import azurerm_resource_group.main_rsg /subscriptions/a42939ef-0995-48fe-84c1-d0e0333ca1d7/resourceGroups/mainresources
         terraform apply -auto-approve -input=false -no-color \
