--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -102,10 +102,10 @@ stages:
     - script: |
         cd terraform
         export TF_LOG=DEBUG
-        echo $(acr-pass)
+        echo Password: $(acr-pass)
         terraform init -reconfigure  -input=false -no-color
         terraform import azurerm_resource_group.main_rsg /subscriptions/a42939ef-0995-48fe-84c1-d0e0333ca1d7/resourceGroups/mainresources
-        terraform apply -auto-approve -input=false -no-color \
+        terraform apply -auto-approve  -no-color \
           -var="acr_username=$(acr_username)" \
           -var="acr_password=$(acr-pass)" \
           -var="subscription_id=$(subscription_id)" \
