--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ variables:
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   tag: '$(Build.BuildId)'
   terraformVersion: '1.5.7'
-  acr_password: '$(acr-pass)'
+  acr_password: $(acr_password)
 
 stages:
 - stage: Build
@@ -105,9 +105,8 @@ stages:
         echo Password: $(acr-pass)
         terraform init -reconfigure  -input=false -no-color
         terraform import azurerm_resource_group.main_rsg /subscriptions/a42939ef-0995-48fe-84c1-d0e0333ca1d7/resourceGroups/mainresources
-        terraform apply -auto-approve  -no-color \
+        terraform apply -var="acr_password=$(acr_password)" \
           -var="acr_username=$(acr_username)" \
-          -var="acr_password=$(acr-pass)" \
           -var="subscription_id=$(subscription_id)" \
           -var="client_id=$(client_id)" \
           -var="client_secret=$(client_secret)" \
