--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,9 +101,16 @@ stages:
     - script: |
         cd terraform
         export TF_LOG=DEBUG
-        echo Password: $(acr_password)
         terraform init -reconfigure -var="acr_password=$(acr_password)"
-        terraform import azurerm_resource_group.main_rsg /subscriptions/a42939ef-0995-48fe-84c1-d0e0333ca1d7/resourceGroups/mainresources
+        terraform import \
+         -var="acr_username=$(acr_username)" \
+         -var="acr_password=$(acr_password)" \
+         -var="subscription_id=$(subscription_id)" \
+         -var="client_id=$(client_id)" \
+         -var="client_secret=$(client_secret)" \
+         -var="tenant_id=$(tenant_id)" \
+         azurerm_resource_group.main_rsg /subscriptions/***/resourceGroups/mainresources
+       
         terraform apply -var="acr_password=$(acr_password)" \
           -var="acr_username=$(acr_username)" \
           -var="subscription_id=$(subscription_id)" \
