Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -118,5 +118,5 @@ stages:
          -var="client_id=$(client_id)" \
          -var="client_secret=$(client_secret)" \
          -var="tenant_id=$(tenant_id)"
-        DisplayName: 'Terraform Apply'
+      displayName: 'Terraform Apply'
 
