--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,4 @@ ModelManifest.xml
 terraform/variables.tfvars
 terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
+terraform/variables.tfvars
