--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -47,7 +47,7 @@ stages:
     - task: AzureCLI@2
       displayName: 'Get AKS Credentials'
       inputs:
-        azureSubscription: 'Your-Azure-Service-Connection'
+        azureSubscription: 'rsg-permission'
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
@@ -69,7 +69,7 @@ stages:
     - task: AzureCLI@2
       displayName: 'Create Static IP Address in MC_ Resource Group'
       inputs:
-        azureSubscription: 'Your-Azure-Service-Connection'
+        azureSubscription: 'rsg-permission'
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
