--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -192,3 +192,64 @@ stages:
           IP=$(kubectl get service nginx-ingress-ingress-nginx-controller -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
           echo "Ingress IP: $IP"
           echo "##vso[task.setvariable variable=ingressIP;isOutput=true]$IP"
+
+- stage: HelmDeploy
+  displayName: 'Helm Chart Deploy to AKS'
+  dependsOn: SetupHTTPS
+  jobs:
+  - job: DeployHelm
+    pool:
+      name: Default
+    variables:
+      chartVersion: '1.0.0-$(Build.BuildId)'
+      helmChartName: 'bestrongapp'
+      acrUrl: 'bestrongaks1acr1.azurecr.io'
+    steps:
+
+    - task: AzureCLI@2
+      displayName: 'Get AKS Credentials'
+      inputs:
+        azureSubscription: 'rsg-permission'
+        scriptType: 'bash'
+        scriptLocation: 'inlineScript'
+        inlineScript: |
+          az aks get-credentials --resource-group bestrongAKS1-rg --name bestrongAKS1
+
+    - task: HelmInstaller@1
+      displayName: 'Install Helm'
+      inputs:
+        helmVersionToInstall: 'latest'
+
+    - task: Bash@3
+      displayName: 'Package Helm Chart and Push to ACR'
+      inputs:
+        targetType: 'inline'
+        script: |
+          CHART_PATH="./helm"
+          CHART_FULL_NAME=$(helm show chart $CHART_PATH | grep '^name:' | awk '{print $2}')
+          helm package $CHART_PATH --version $(chartVersion) --app-version $(Build.BuildId)
+
+          echo "Logging in to ACR..."
+          az acr login --name $(acrUrl)
+
+          echo "Enabling OCI support and pushing chart to ACR..."
+          export HELM_EXPERIMENTAL_OCI=1
+
+          helm push ${CHART_FULL_NAME}-$(chartVersion).tgz oci://$(acrUrl)/helm
+
+    - task: Bash@3
+      displayName: 'Deploy Helm Chart from ACR to AKS'
+      inputs:
+        targetType: 'inline'
+        script: |
+          export HELM_EXPERIMENTAL_OCI=1
+          helm registry login $(acrUrl)
+
+          helm pull oci://$(acrUrl)/helm/$(helmChartName) --version $(chartVersion)
+          helm install $(helmChartName) $(helmChartName)-$(chartVersion).tgz \
+            --set image.repository=$(acrUrl)/$(imageRepository) \
+            --set image.tag=$(Build.BuildId) \
+            --set ingress.host=$(ingressIP) \
+            --values ./helm/values.yaml \
+            --namespace default --create-namespace \
+            --wait
