--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -274,8 +274,7 @@ stages:
           
           helm install $(helmChartName) $(helmChartName)-$(chartVersion).tgz \
             --set image.repository=$(acrUrl)/$(imageRepository) \
-            --set image.tag=$(Build.BuildId) \
+            --set image.tag=123 \
             --set ingress.host=$(ingressIP).nip.io \
             --values ./helm/values.yaml \
-            --namespace default --create-namespace \
-            --wait
+            --namespace default --create-namespace --wait
