--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -276,9 +276,11 @@ stages:
           echo "imageRepository: $(imageRepository)"
           echo "ingressIP: $(ingressIP)"
 
+          helm uninstall $(helmChartName) --namespace default || true
+
           helm install  $(helmChartName) $(helmChartName)-$(chartVersion).tgz \
             --set image.repository=$(acrUrl)/$(imageRepository) \
             --set image.tag=123 \
             --set ingress.host=$(ingressIP).nip.io \
             --values ./helm/values.yaml \
-            --namespace default --create-namespace --wait
+            --namespace default --create-namespace
